Using comment directive to specifiy composite pass rts.
Signed-off-by: CaIzii <2470159730@qq.com>

--- a/Code/Game/FGSPDX12DRECPS.vcxproj
+++ b/Code/Game/FGSPDX12DRECPS.vcxproj
@@ -218,6 +218,100 @@
         </ProjectReference>
     </ItemGroup>
     <ItemGroup>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\composite.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\composite.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\final.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\final.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_basic.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_basic.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_clouds.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_clouds.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_skybasic.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_skybasic.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_skytextured.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_skytextured.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_terrain.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_terrain.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_terrain_cutout.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_terrain_cutout.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_textured.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_textured.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_water.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\gbuffers_water.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\shadow.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_0\shadow.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\composite.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\composite.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\final.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\final.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_basic.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_basic.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_clouds.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_clouds.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_debug.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_debug.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_skybasic.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_skybasic.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_skytextured.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_skytextured.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_terrain.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_terrain.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_terrain_cutout.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_terrain_cutout.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_textured.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_textured.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_water.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_water.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\shadow.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\shadow.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\composite.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\composite.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\composite1.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\composite1.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\final.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\final.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_basic.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_basic.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_clouds.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_clouds.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_skybasic.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_skybasic.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_skytextured.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_skytextured.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_terrain.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_terrain.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_terrain_cutout.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_terrain_cutout.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_textured.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_textured.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_water.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\gbuffers_water.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\shadow.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\shadow.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\composite.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\composite.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\final.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\final.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_basic.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_basic.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_clouds.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_clouds.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_debug.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_debug.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_skybasic.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_skybasic.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_skytextured.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_skytextured.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_terrain.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_terrain.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_terrain_cutout.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_terrain_cutout.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_textured.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_textured.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_water.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\gbuffers_water.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\shadow.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\program\shadow.vs.hlsl"/>
         <ClCompile Include="Framework\GameObject\ImguiPlayerDebugInfo.cpp" />
         <ClCompile Include="Framework\Imgui\ImguiGameLogic.cpp"/>
         <ClCompile Include="Framework\Imgui\ImguiGameSettings.cpp"/>
@@ -232,6 +326,8 @@
         <ClCompile Include="Framework\RenderPass\RenderComposite\ImguiSettingComposite.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderDebug\DebugRenderPass.cpp" />
         <ClCompile Include="Framework\RenderPass\RenderFinal\FinalRenderPass.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderPassHelper.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderShadowComposite\ShadowCompositeRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderShadow\ShadowRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\ImguiSettingSky.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyColorHelper.cpp"/>
@@ -276,6 +372,8 @@
         <ClInclude Include="Framework\RenderPass\RenderComposite\ImguiSettingComposite.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderDebug\DebugRenderPass.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderFinal\FinalRenderPass.hpp" />
+        <ClInclude Include="Framework\RenderPass\RenderPassHelper.hpp"/>
+        <ClInclude Include="Framework\RenderPass\RenderShadowComposite\ShadowCompositeRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderShadow\ShadowRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderSky\ImguiSettingSky.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyColorHelper.hpp"/>
@@ -323,6 +421,30 @@
         <ClInclude Include="GameCommon.hpp" />
         <ClInclude Include="Gameplay\Game.hpp" />
         <!-- <ClInclude Include="Test\UnitTest_ShaderFallbackGenerator.hpp" /> REMOVED: ShaderFallbackGenerator deleted in Dual ShaderPack architecture (2025-10-19) -->
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\.gitignore"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\README.md"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle.json"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\fallback_rule.json"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\materials.properties"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\shaders.properties"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\tools\setup.bat"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\tools\setup.sh"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\.gitignore"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\README.md"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle.json"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\fallback_rule.json"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\materials.properties"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\shaders.properties"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\tools\setup.bat"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\tools\setup.sh"/>
+    </ItemGroup>
+    <ItemGroup>
+        <Folder Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\bundle\mycustom_bundle_1\"/>
+        <Folder Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\lib\"/>
+        <Folder Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_1\"/>
+        <Folder Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\lib\"/>
     </ItemGroup>
     <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets"/>
     <ImportGroup Label="ExtensionTargets">
