--- a/Run/.enigma/config/engine/renderer.yml
+++ b/Run/.enigma/config/engine/renderer.yml
@@ -1,70 +1,193 @@
-# ==================== RendererSubsystem配置 (Milestone 3.0) ====================
-# 控制整个渲染子系统的行为
-# 遵循"一个子系统一个配置文件"原则
+# ==============================================================================
+# RendererSubsystem Configuration (Milestone 3.0)
+# ==============================================================================
+# Controls the entire rendering subsystem behavior.
+# Follows the "one subsystem, one config file" principle.
+#
+# Architecture Reference: Engine/Core/Schedule/ScheduleSubsystem.hpp (ScheduleConfig pattern)
 
-# ==================== Shader编译配置 ====================
+# ==============================================================================
+# Shader Compilation Settings
+# ==============================================================================
 shader:
-  # Shader入口点名称（全局统一）
-  # - "main": Iris兼容（推荐，默认值）
-  # - "VSMain": DirectX风格
-  # - 自定义名称: 用于特殊需求
+  # Shader entry point name (global, applies to all shader stages)
   #
-  # 教学要点:
-  # - Iris兼容性: Iris使用 "main" 作为入口点（GLSL标准）
-  # - 简化配置: 所有shader阶段使用相同入口点
-  # - 配置驱动: 避免硬编码，提高灵活性
+  # Options:
+  #   - "main"   : Iris-compatible (recommended, default)
+  #   - "VSMain" : DirectX style
+  #   - Custom   : For special requirements
+  #
+  # Note: Iris uses "main" as entry point (GLSL standard)
   entryPoint: "main"
 
-# ==================== GBuffer配置 ====================
+# ==============================================================================
+# GBuffer Settings
+# ==============================================================================
 gbuffer:
-  # colortex数量，范围 [1-16]
+  # Number of color textures, range [1-16]
   #
-  # 推荐配置（1920x1080, R8G8B8A8格式）:
-  #   - 简单场景: 4个colortex，节省75%内存（约33.2MB，节省~99.4MB）
-  #   - 标准场景: 8个colortex，节省50%内存（约66.3MB，节省~66.3MB）
-  #   - 复杂场景: 16个colortex（Iris完全兼容，约132.6MB）
+  # Memory usage examples (1920x1080, R8G8B8A8 format):
+  #   - 4 colortex  : ~33.2MB  (saves 75%, ~99.4MB saved)
+  #   - 8 colortex  : ~66.3MB  (saves 50%, balanced)
+  #   - 16 colortex : ~132.6MB (full Iris compatibility)
   #
-  # 教学要点:
-  # - 配置驱动: 用户可根据场景复杂度调整内存占用
-  # - 性能权衡: 更多colortex支持更复杂的材质系统
-  # - Iris兼容: 16个colortex与Iris ShaderPack完全兼容
+  # Recommendation:
+  #   - Simple scenes  : 4 colortex
+  #   - Standard scenes: 8 colortex (default)
+  #   - Complex scenes : 16 colortex (Iris ShaderPack compatible)
   colorTexCount: 8
 
-# ==================== 渲染分辨率配置 ====================
-resolution:
-  # 渲染宽度（像素）
-  # 通常从窗口系统动态获取，此处为默认值/初始化备用值
+# ==============================================================================
+# Render Resolution Settings
+# ==============================================================================
+rendering:
+  # Render width in pixels
+  # Usually obtained from window system; this is the fallback/initial value
   width: 1920
 
-  # 渲染高度（像素）
+  # Render height in pixels
   height: 1080
 
-# ==================== 未来扩展配置 (Milestone 3.X+) ====================
-# 以下配置项预留，后续Milestone实现
+  # Maximum frames in flight [2-3]
+  #   - 2: Double buffering (lower latency, GPU may wait)
+  #   - 3: Triple buffering (recommended, balanced)
+  maxFramesInFlight: 3
 
-# VSync配置
+# ==============================================================================
+# Debug Settings
+# ==============================================================================
+debug:
+  # Enable DirectX 12 debug layer
+  # Performance impact: ~20-50% slower, development only
+  enableDebugLayer: true
+
+  # Enable GPU validation layer
+  # Performance impact: ~50-80% slower, deep debugging only
+  enableGPUValidation: true
+
+  # Enable bindless resources (SM6.6 feature)
+  enableBindlessResources: true
+
+# ==============================================================================
+# Render Target Configuration
+# ==============================================================================
+# All RT types are always created at maximum count.
+# This section configures format, clear values, and dimensions.
+# ShaderBundle can override these via directives (e.g., colortex0Format).
+#
+# DIMENSION MODES:
+# ================
+# 1. Relative Size (Scale) - DEFAULT
+#    Uses widthScale/heightScale multiplied by render resolution.
+#    Automatically adapts to window resize.
+#    Example: widthScale: 0.5 at 1920x1080 = 960x540
+#
+# 2. Absolute Size (Fixed)
+#    Uses explicit width/height in pixels.
+#    Ignores render resolution, fixed size.
+#    Example: width: 2048, height: 2048 (typical for shadow maps)
+#
+# PRIORITY: If width > 0 AND height > 0, absolute size is used.
+#           Otherwise, scale * renderResolution is used.
+#
+rendertargets:
+
+  # --------------------------------------------------------------------------
+  # ColorTexture Configuration (16 textures: colortex0-15)
+  # --------------------------------------------------------------------------
+  colortexture:
+    # Default config applied to all colortex unless overridden
+    defaultConfig:
+      format: R8G8B8A8_UNORM
+      clearValue: [ 0.0, 0.0, 0.0, 1.0 ]  # RGBA clear color
+      enableClear: true
+      enableFlipper: true               # Enable double-buffering flip
+      widthScale: 1.0                   # Relative to render resolution
+      heightScale: 1.0
+
+    # Index-specific overrides (optional)
+    configs:
+      0:
+        format: R8G8B8A8_UNORM
+        clearValue: [ 0.0, 0.0, 0.0, 1.0 ]
+        enableClear: true
+        enableFlipper: true
+      # Example: Half-resolution AO buffer
+      # 1:
+      #   format: R8_UNORM
+      #   widthScale: 0.5
+      #   heightScale: 0.5
+
+  # --------------------------------------------------------------------------
+  # DepthTexture Configuration (3 textures: depthtex0-2)
+  # --------------------------------------------------------------------------
+  depthtexture:
+    defaultConfig:
+      format: D24_UNORM_S8_UINT
+      clearValue: 1.0                   # Depth clear value (0.0-1.0)
+      enableClear: true
+      widthScale: 1.0
+      heightScale: 1.0
+
+    configs:
+      0:
+        format: D24_UNORM_S8_UINT
+        clearValue: 1.0
+        enableClear: true
+
+  # --------------------------------------------------------------------------
+  # ShadowColor Configuration (8 textures: shadowcolor0-7)
+  # --------------------------------------------------------------------------
+  # [Iris Ref] PackShadowDirectives.java:399-405 - clearColor = new Vector4f(1.0F)
+  # White = no shadow color modulation (default, correct)
+  # Black would incorrectly absorb all light in shadow calculations
+  shadowcolor:
+    defaultConfig:
+      format: R8G8B8A8_UNORM
+      clearValue: [ 1.0, 1.0, 1.0, 1.0 ]  # White (Iris standard)
+      enableClear: true
+      enableFlipper: true
+      widthScale: 1.0
+      heightScale: 1.0
+
+    configs:
+      0:
+        format: R8G8B8A8_UNORM
+        clearValue: [ 1.0, 1.0, 1.0, 1.0 ]  # White (Iris standard)
+        enableClear: true
+
+  # --------------------------------------------------------------------------
+  # ShadowTexture Configuration (2 textures: shadowtex0-1)
+  # --------------------------------------------------------------------------
+  # Shadow maps typically use fixed resolution for consistent quality.
+  shadowtexture:
+    defaultConfig:
+      format: D32_FLOAT
+      clearValue: 1.0
+      enableClear: true
+      # Example: Fixed 2048x2048 shadow map (absolute size)
+      # width: 2048
+      # height: 2048
+      widthScale: 1.0
+      heightScale: 1.0
+
+    configs:
+      0:
+        format: D32_FLOAT
+        clearValue: 1.0
+        enableClear: true
+
+# ==============================================================================
+# Future Extensions (Milestone 3.X+)
+# ==============================================================================
+# Reserved for future implementation:
+#
 # vsync:
 #   enabled: true
-
-# MSAA配置
+#
 # msaa:
-#   sampleCount: 1  # 1=无MSAA, 2/4/8=MSAA采样数
-
-# HDR配置
+#   sampleCount: 1    # 1=disabled, 2/4/8=MSAA samples
+#
 # hdr:
 #   enabled: false
 #   format: R16G16B16A16_FLOAT
-
-# 调试配置
-# debug:
-#   enableOverlay: false
-#   enableGPUValidation: true
-
-# ==================== 配置文件说明 ====================
-# Milestone 3.0: 配置系统重构
-# - 从render_targets.yaml迁移到统一的renderer.yml
-# - 遵循"一个子系统一个配置文件"原则
-# - 支持未来扩展（VSync, MSAA, HDR等）
-# - 参考架构: ScheduleSubsystem的schedule.yml设计
-
-# 架构参考: Engine/Core/Schedule/ScheduleSubsystem.hpp (ScheduleConfig模式)
