Normalize XML formatting and add WorldTimeUniforms header file
Signed-off-by: CaIzii <2470159730@qq.com>

--- a/Code/Game/FGSPDX12DRECPS.vcxproj
+++ b/Code/Game/FGSPDX12DRECPS.vcxproj
@@ -363,6 +363,7 @@
         <ClInclude Include="Framework\RenderPass\ConstantBuffer\CelestialConstantBuffer.hpp"/>
         <ClInclude Include="Framework\RenderPass\ConstantBuffer\CommonConstantBuffer.hpp"/>
         <ClInclude Include="Framework\RenderPass\ConstantBuffer\FogUniforms.hpp"/>
+        <ClInclude Include="Framework\RenderPass\ConstantBuffer\WorldTimeUniforms.hpp"/>
         <!-- REMOVED: PlayerStatusUniforms.hpp merged into CommonConstantBuffer.hpp (2026-01-22) -->
         <ClInclude Include="Framework\RenderPass\RenderCloud\CloudConfigParser.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderCloud\CloudGeometryHelper.hpp"/>
