Add deferred rendering and split sky system into basic and textured
Signed-off-by: CaIzii <2470159730@qq.com>

--- a/Code/Game/FGSPDX12DRECPS.vcxproj
+++ b/Code/Game/FGSPDX12DRECPS.vcxproj
@@ -264,6 +264,8 @@
         <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\gbuffers_water.vs.hlsl"/>
         <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\shadow.ps.hlsl"/>
         <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\shadow.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\textures\cloud-water.png"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\textures\cloud-water.png.enigmeta"/>
         <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\composite.ps.hlsl"/>
         <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\composite.vs.hlsl"/>
         <Content Include="..\..\Run\.enigma\shaderbundles\GuildhallVector\shaders\bundle\mycustom_bundle_0\composite1.ps.hlsl"/>
@@ -317,6 +319,14 @@
         <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\lib\shadow.hlsl"/>
         <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\include\rt_formats.hlsl"/>
         <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\include\settings.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\lib\atmosphere.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\lib\clouds.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\lib\noise.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\lib\volumetricLight.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\composite1.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\composite1.vs.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\deferred1.ps.hlsl"/>
+        <Content Include="..\..\Run\.enigma\shaderbundles\EnigmaDefault\shaders\program\deferred1.vs.hlsl"/>
         <ClCompile Include="Framework\GameObject\ImguiPlayerDebugInfo.cpp" />
         <ClCompile Include="Framework\Imgui\ImguiGameLogic.cpp"/>
         <ClCompile Include="Framework\Imgui\ImguiGameSettings.cpp"/>
@@ -330,15 +340,18 @@
         <ClCompile Include="Framework\RenderPass\RenderComposite\CompositeRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderComposite\ImguiSettingComposite.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderDebug\DebugRenderPass.cpp" />
+        <ClCompile Include="Framework\RenderPass\RenderDeferred\DeferredRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderFinal\FinalRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderPassHelper.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderShadowComposite\ShadowCompositeRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderShadow\ShadowRenderPass.cpp"/>
-        <ClCompile Include="Framework\RenderPass\RenderSky\ImguiSettingSky.cpp"/>
-        <ClCompile Include="Framework\RenderPass\RenderSky\SkyColorHelper.cpp"/>
-        <ClCompile Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.cpp"/>
-        <ClCompile Include="Framework\RenderPass\RenderSky\SkyRenderPass.cpp"/>
-        <ClCompile Include="Framework\RenderPass\RenderSky\StarGeometryHelper.cpp" />
+        <ClCompile Include="Framework\RenderPass\RenderSkyBasic\ImguiSettingSkyBasic.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderSkyBasic\SkyColorHelper.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderSkyBasic\SkyGeometryHelper.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderSkyBasic\SkyBasicRenderPass.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderSkyTextured\ImguiSettingSkyTextured.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderSkyTextured\SkyTexturedRenderPass.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderSkyTextured\StarGeometryHelper.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderTerrainCutout\TerrainCutoutRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderTerrainTranslucent\TerrainTranslucentRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderTerrain\TerrainRenderPass.cpp"/>
@@ -369,6 +382,7 @@
         <ClInclude Include="Framework\RenderPass\ConstantBuffer\CelestialConstantBuffer.hpp"/>
         <ClInclude Include="Framework\RenderPass\ConstantBuffer\CommonConstantBuffer.hpp"/>
         <ClInclude Include="Framework\RenderPass\ConstantBuffer\FogUniforms.hpp"/>
+        <ClInclude Include="Framework\RenderPass\ConstantBuffer\WorldInfoUniforms.hpp"/>
         <ClInclude Include="Framework\RenderPass\ConstantBuffer\WorldTimeUniforms.hpp"/>
         <!-- REMOVED: PlayerStatusUniforms.hpp merged into CommonConstantBuffer.hpp (2026-01-22) -->
         <ClInclude Include="Framework\RenderPass\RenderCloud\CloudConfigParser.hpp"/>
@@ -379,15 +393,18 @@
         <ClInclude Include="Framework\RenderPass\RenderComposite\CompositeRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderComposite\ImguiSettingComposite.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderDebug\DebugRenderPass.hpp" />
+        <ClInclude Include="Framework\RenderPass\RenderDeferred\DeferredRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderFinal\FinalRenderPass.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderPassHelper.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderShadowComposite\ShadowCompositeRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderShadow\ShadowRenderPass.hpp"/>
-        <ClInclude Include="Framework\RenderPass\RenderSky\ImguiSettingSky.hpp" />
-        <ClInclude Include="Framework\RenderPass\RenderSky\SkyColorHelper.hpp"/>
-        <ClInclude Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.hpp" />
-        <ClInclude Include="Framework\RenderPass\RenderSky\SkyRenderPass.hpp" />
-        <ClInclude Include="Framework\RenderPass\RenderSky\StarGeometryHelper.hpp" />
+        <ClInclude Include="Framework\RenderPass\RenderSkyBasic\ImguiSettingSkyBasic.hpp"/>
+        <ClInclude Include="Framework\RenderPass\RenderSkyBasic\SkyColorHelper.hpp"/>
+        <ClInclude Include="Framework\RenderPass\RenderSkyBasic\SkyGeometryHelper.hpp"/>
+        <ClInclude Include="Framework\RenderPass\RenderSkyBasic\SkyBasicRenderPass.hpp"/>
+        <ClInclude Include="Framework\RenderPass\RenderSkyTextured\ImguiSettingSkyTextured.hpp"/>
+        <ClInclude Include="Framework\RenderPass\RenderSkyTextured\SkyTexturedRenderPass.hpp"/>
+        <ClInclude Include="Framework\RenderPass\RenderSkyTextured\StarGeometryHelper.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderTerrainCutout\TerrainCutoutRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderTerrainTranslucent\TerrainTranslucentRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderTerrain\TerrainRenderPass.hpp"/>
